@@ -267,6 +267,10 @@ if test "$1" = "config" ; then
 		p_config "mem.cache.message" "Message cache memory"
 		p_config "mem.mod.iterator" "Iterator module memory"
 		p_config "mem.mod.validator" "Validator module and key cache memory"
+		p_config "msg.cache.count" "msg cache count"
+		p_config "rrset.cache.count" "rrset cache count"
+		p_config "infra.cache.count" "infra cache count"
+		p_config "key.cache.count" "key cache count"
 		echo "graph_info The memory used by unbound."
 		;;
 	by_type)
@@ -454,8 +458,9 @@ memory)
 		fi
 	fi
 	echo "$mn.value" $value
-	for x in mem.cache.rrset mem.cache.message \
-		mem.mod.iterator mem.mod.validator; do
+	for x in mem.cache.rrset mem.cache.message mem.mod.iterator \
+		mem.mod.validator msg.cache.count rrset.cache.count \
+		infra.cache.count key.cache.count; do
 		print_value $x
 	done
 	;;
